sql/test/error/error3.exp


update t1 set 1 = 1;
                ^
                |
                 ----- ERROR
Error: line 3, characters 17-17:
Invalid set
